# Crud-

./: .gitignore  CMakeLists.txt  client_socket.hpp  json.hpp  main.cpp  preset_manager.cpp  preset_manager.hpp  server.py  test_tkinter.py
